--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
-[package]
-name = "competitive-rust"
-version = "0.1.0"
-edition = "2021"
-license-file = "LICENSE"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+resolver = "2"
 
-[dependencies]
-pprof = { version = "0.11.1", features = ["flamegraph"] }
+members = [
+  "dopecomp_io",
+  "dopecomp_graph"
+]
