--- a/dopecomp_graph/Cargo.toml
+++ b/dopecomp_graph/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Matei Tinca <tinca.matei02@gmail.com>"]
 
 keywords = ["competitive", "algorithms"]
 readme = "../README.md"
-license-file = "../LICENSE"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/tincaMatei/competitive-rust"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
